# griffe-bagof-magic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
src/griffe_bagof_magic/: __init__.py  _version.py
tests/: requirements.txt  test_extension.py
